--- a/extension/content.css
+++ b/extension/content.css
@@ -1,17 +1,20 @@
 /* content.css */
+
 .orbitar-icon {
   position: absolute;
   width: 24px;
   height: 24px;
   cursor: pointer;
-  z-index: 99999;
-  background-image: url("chrome-extension://__MSG_@@extension_id__/icons/icon48.png");
-  background-size: cover;
-  border-radius: 50%;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s;
+  z-index: 2147483647;
+  border-radius: 9999px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  background-color: #020617;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.orbitar-icon:hover {
-  transform: scale(1.1);
+.orbitar-icon img {
+  width: 18px;
+  height: 18px;
 }
